# Rusk

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  main.rs
src/config/: loader.rs  mod.rs  settings.rs  themes.rs
src/core/: editor.rs  mod.rs
src/core/buffer/: buffer.rs  history.rs  mod.rs  operations.rs
src/core/cursor/: mod.rs  movement.rs  position.rs
src/core/state/: editor_state.rs  mod.rs  properties.rs
src/plugins/: events.rs  mod.rs  registry.rs
src/plugins/implementations/: mod.rs
src/plugins/implementations/config/: mod.rs  parser.rs
src/plugins/implementations/editing/: mod.rs  vim.rs
src/plugins/implementations/file/: io.rs  mod.rs
src/plugins/implementations/language/: mod.rs  syntax.rs
src/plugins/implementations/ui/: mod.rs  tui.rs
src/services/: command_system.rs  event_bus.rs  logger.rs  mod.rs
src/syntax/grammars/: service.wasm
src/syntax/queries/bash/: highlights.scm
src/syntax/queries/c/: highlights.scm
src/syntax/queries/cmake/: highlights.scm
src/syntax/queries/cpp/: highlights.scm
src/syntax/queries/css/: highlights.scm
src/syntax/queries/dart/: highlights.scm
src/syntax/queries/dockerfile/: highlights.scm
src/syntax/queries/go/: highlights.scm
src/syntax/queries/haskell/: highlights.scm
src/syntax/queries/html/: highlights.scm
src/syntax/queries/java/: highlights.scm
src/syntax/queries/javascript/: highlights.scm
src/syntax/queries/json/: highlights.scm
src/utils/: keybindings.rs  macros.rs  mod.rs  text.rs
tests/: complete_integration_tests.rs  integration_tests.rs
(+20 files in other folders)
