[package]
name = "rusk"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rusk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0.0"
ratatui = "0.30.0-alpha.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tui-textarea = "0.7.0"
tree-sitter = "0.25.8"
tree-sitter-highlight = "0.25.8"
tree-sitter-rust = "0.24.0"
crossterm = "0.29.0"
tree-sitter-python = "0.23.6"
anyhow = "1.0.98"
thiserror = "2.0.12"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"
rusk = { path = "." }
